[tool.poetry]
name = "recommender-systems"
version = "0.1.0"
description = ""
authors = ["mwtmurphy <mitchell@motorway.co.uk>"]
readme = "README.md"
packages = [{include = "recommender_systems"}]

[tool.poetry.dependencies]
python = "3.10.12"
ipykernel = "^6.25.2"
pandas = "^2.1.0"
numpy = "^1.25.2"
openpyxl = "^3.1.2"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
